samples/_failures_safe/1761043542_338b8d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c30a1f9a.c: In function ‘main’:
./samples/SAFE/__tmp_c30a1f9a.c:143:28: error: missing terminating " character
  143 |                     printf("Show %s entries? (y/n):
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c30a1f9a.c:143:21: error: expected expression at end of input
  143 |                     printf("Show %s entries? (y/n):
      |                     ^~~~~~
./samples/SAFE/__tmp_c30a1f9a.c:143:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c30a1f9a.c:143:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c30a1f9a.c:143:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c30a1f9a.c:143:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c30a1f9a.c:143:21: error: expected declaration or statement at end of input
